# average_and_stddev

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  average_and_stddev.sln  build.ps1  makefile  makefile.old
average_and_stddev/: ave_stddev.cpp  average_and_stddev.vcxproj  average_and_stddev.vcxproj.filters
average_and_stddev.vcxproj/: average_and_stddev.vcxproj  average_and_stddev.vcxproj.filters
src/: ave_stddev.cpp  ave_stddev.h.in
